--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:url" content="https://jeongyunki.github.io/html-css-test/">
         <meta property="og:type" content="website">
         <meta property="og:title" content=" HTML-CSS PJT JeongYunKi ">
-        <meta property="og:description" content="og:HTML & CSS 활용">
+        <meta property="og:description" content="HTML & CSS 활용 (정윤기)">
         <meta property="og:image" content="https://3.bp.blogspot.com/-CR-HbSR2C1g/WMwbWvJnQgI/AAAAAAAAAFQ/JVEmqtRhccE1CBOTBds6UwWOBgGaCVhOQCLcB/s1600/logo_og_opengraph.png">
 		<meta property="og:image:width" content="1200">
 		<meta property="og:image:height" content="630">
